--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-body {
-  margin: 0;
+html, body, input {
+  background-color: #282c34;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +10,35 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+p, h1, h2, h3, h4, h5, h6, ul, li, a{
+  padding: 0;
+  margin: 0;
+}
+
+a{
+  text-decoration: none;
+  color: inherit;
+}
+
+ul, li{
+  list-style: none;
+}
+
+::-webkit-scrollbar {
+  width: 6px!important;
+  height: 6px!important;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(255,255,255,.4);
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgba(0,0,0,.4);
+}
+
+:focus{
+  outline: none;
 }
