--- a/src/components/Profile/css.css
+++ b/src/components/Profile/css.css
@@ -92,6 +92,19 @@
     padding-right:10px;
 }
 
+.profile-wpp{
+    display: flex;
+    width: 250px;
+    margin: 15px auto;
+    align-items: center;
+    background-color: #25d365d0;
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-weight: bold;
+    justify-content: center;
+    font-size: 15px;
+}
+
 .share-icon{
     border: 2px solid #FAFAFA;
     padding: 3px;
