--- a/src/components/Login/css.css
+++ b/src/components/Login/css.css
@@ -4,7 +4,7 @@ body {
 	font-family: sans-serif;
 }
 .login {
-	/* background: url(bg1.jpg); */
+	/* background: url(bg-1.jpg); */
 	height: 100vh;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -13,8 +13,8 @@ body {
 .login-box {
 	width: 320px;
 	height: 420px;
-	background: rgba(var(--black), 0.95);
-	color: var(--white);
+	background: rgba(0, 0, 0, 0.418);
+	color: white;
 	top: 50%;
 	left: 50%;
 	position: absolute;
@@ -29,12 +29,12 @@ body {
 }
 
 .avatar {
-	width: 100px;
+	width: 80px;
 	height: 100px;
 	border-radius: 50%;
 	position: absolute;
 	top: -50px;
-	left: calc(50% - 50px);
+	left: calc(50% - 45px);
 }
 h1 {
 	margin: 0;
@@ -43,8 +43,8 @@ h1 {
 	font-size: 22px;
 }
 .message-error {
-	border-bottom: 1px solid var(--orange);
-	border-top: 1px solid var(--orange);
+	border-bottom: 1px solid #5282d0;
+	border-top: 1px solid #5282d0;
 	border-radius: 2px;
 	margin-top: -2px;
 	padding: 5px 5px;
@@ -69,21 +69,32 @@ h1 {
 .login-box input[type='email'],
 input[type='password'] {
 	border: none;
-	border-bottom: 1px solid var(--white);
+	border-bottom: 1px solid white;
 	background: transparent;
 	outline: none;
 	height: 40px;
-	color: var(--white);
+	color: white;
 	font-size: 16px;
 }
 .login-box input:focus {
-	border-bottom: 1px solid var(--orange);
+	border-bottom: 1px solid #5282d0;
 }
 .login-box a {
 	text-decoration: none;
 	font-size: 16px;
-	color: var(--white);
+	color: white;
 }
 .login-box a:hover {
-	color: var(--orange);
+	color:#5282d0;
+}
+.login .button {
+	height: 45px;
+	border-radius: .3em;
+	border: none;
+	background-color: #5282d0;
+	color: white;
+}
+
+.login .button:hover {
+	opacity: .8;
 }
