--- a/src/components/Login/css.css
+++ b/src/components/Login/css.css
@@ -75,12 +75,12 @@ input[type="password"] {
 .login-box input:focus {
   border-bottom: 1px solid #5282d0;
 }
-.login-box a {
+.login-box p {
   text-decoration: none;
   font-size: 16px;
   color: white;
 }
-.login-box a:hover {
+.login-box p:hover {
   color: #5282d0;
 }
 .login .button {
