--- a/src/components/Login/css.css
+++ b/src/components/Login/css.css
@@ -6,13 +6,13 @@
 }
 
 .login-header {
-	display: flex;
-	align-self: center;
-  }
-  
-  .login .back {
-	margin: 7px;
-  }
+  display: flex;
+  align-self: center;
+}
+
+.login .back {
+  margin: 7px;
+}
 
 .login-box {
   width: 320px;
@@ -91,7 +91,7 @@ input[type="password"] {
 .login-box p:hover {
   color: #5282d0;
 }
-.login .button {
+.button {
   height: 45px;
   border-radius: 0.3em;
   border: none;
@@ -99,6 +99,12 @@ input[type="password"] {
   color: white;
 }
 
-.login .button:hover {
+.button:hover {
   opacity: 0.8;
+}
+
+.button.transparent {
+  color: white;
+  background-color: rgba(255, 255, 255, 0.05);
+  border: 2px solid #5282d0;
 }
