--- a/src/components/Register/css.css
+++ b/src/components/Register/css.css
@@ -7,7 +7,9 @@
 
 .register-header {
   display: flex;
-  align-self: center;
+  width: 100%;
+  margin: 0 auto;
+  justify-items: center;
 }
 
 .register .back {
@@ -35,7 +37,6 @@
 .avatar {
   width: 80px;
   height: 100px;
-  border-radius: 50%;
   position: absolute;
   top: -50px;
   left: calc(50% - 45px);
@@ -90,4 +91,20 @@ input[type="password"] {
 }
 .register-box p:hover {
   color: #5282d0;
+}
+@media screen and (max-width: 500px) {
+  .register-box {
+    background: none;
+    position: relative;
+  }
+  .register-pc {
+    display: none;
+  }
+
+  .register-header {
+    display: flex;
+    width: 90%;
+    margin: 0 auto;
+    justify-items: left;
+  }
 }
