--- a/src/components/Account/Edit/css.css
+++ b/src/components/Account/Edit/css.css
@@ -73,3 +73,12 @@
     color: rgba(255, 255, 255, 0.801);
 }
 
+.container-button-profile{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.container-button-profile .button{
+    margin: 5px 0;
+}
