--- a/src/components/Account/Edit/css.css
+++ b/src/components/Account/Edit/css.css
@@ -38,12 +38,13 @@
     color: rgba(255, 255, 255, 0.5)
 }
 
-.profile-call{
+.profile-input{
     display: flex;
     width: 220px;
     margin: 15px auto;
     align-items: center;
     background-color: #00000066;
+    color: rgba(255, 255, 255, 0.801);
     border-radius: 10px;
     padding: 10px 20px;
     font-weight: bold;
