edit profile schedule

--- a/src/components/Account/Edit/css.css
+++ b/src/components/Account/Edit/css.css
@@ -83,3 +83,31 @@
 .container-button-profile .button{
     margin: 5px 0;
 }
+
+.schedule-select {
+    display: flex;
+    width: 150px;
+    color: rgba(255, 255, 255, 0.5);
+    margin: 15px 10px;
+    align-items: center;
+    background-color: #00000066;
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-weight: bold;
+    justify-content: center;
+    font-size: 15px;
+}
+
+.schedule-input {
+    display: flex;
+    width: 50px;
+    margin: 15px 10px;
+    align-items: center;
+    background-color: #00000066;
+    color: rgba(255, 255, 255, 0.801);
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-weight: bold;
+    justify-content: center;
+    font-size: 15px;
+}
