--- a/src/components/Account/Edit/css.css
+++ b/src/components/Account/Edit/css.css
@@ -98,16 +98,24 @@
     font-size: 15px;
 }
 
+.container-inputs-schedule{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
 .schedule-input {
     display: flex;
-    width: 50px;
-    margin: 15px 10px;
+    width: 100%;
     align-items: center;
     background-color: #00000066;
     color: rgba(255, 255, 255, 0.801);
     border-radius: 10px;
     padding: 10px 20px;
+    box-sizing: border-box;
     font-weight: bold;
     justify-content: center;
     font-size: 15px;
+    margin: 10px 0;
 }
