--- a/src/components/Account/Edit/css.css
+++ b/src/components/Account/Edit/css.css
@@ -98,6 +98,33 @@
     font-size: 15px;
 }
 
+.schedule-confirm {
+    display: flex;
+    width: 150px;
+    color: rgba(255, 255, 255, 0.5);
+    margin: 15px 10px;
+    align-items: center;
+    align-self: center;
+    background-color: #00000066;
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-weight: bold;
+    justify-content: center;
+    font-size: 15px;
+}
+
+.schedule-day {
+    display: flex;
+    width: 150px;
+    color: rgba(255, 255, 255, 0.5);
+    margin: 15px 10px;
+    align-items: center;
+    background-color: #0000000e;
+    border-radius: 10px;
+    font-weight: bold;
+    font-size: 18px;
+}
+
 .container-inputs-schedule{
     display: flex;
     align-items: center;
